@@ -1,3 +1,6 @@
+2010-02-28  Roland Clobus <rclobus@rclobus.nl>
+	* meta-server/main.c: Fix some memory leaks.
+
 2010-02-16  Roland Clobus <rclobus@rclobus.nl>
 	* kill-game.sh: Added maintenance script for the meta-server.
 	* server/player.c: Stop and deregister the tournament timer when the
